--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "boto3>=1.42.42",
+    "doc-to-md-cli>=0.1.1",
+    "fastapi>=0.115.0",
     "pillow>=12.1.0",
     "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.20",
+    "uvicorn[standard]>=0.32.0",
 ]
