--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "pillow>=12.1.0",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.20",
+    "requests>=2.32.5",
     "uvicorn[standard]>=0.32.0",
 ]
