--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "boto3>=1.42.42",
     "doc-to-md-cli>=0.1.1",
     "fastapi>=0.115.0",
+    "gspread>=6.2.1",
+    "pandas>=2.3.3",
     "pillow>=12.1.0",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.20",
