--- a/new-ai-converter/pyproject.toml
+++ b/new-ai-converter/pyproject.toml
@@ -8,18 +8,20 @@ dependencies = [
     "click>=8.0.0",
     "pyyaml>=6.0",
     "groq>=0.5.0",
+    "openai>=1.0.0",
     "aiofiles>=23.0.0",
 ]
 
 [project.scripts]
-ai-converter = "src.main:main"
+ai-converter = "ai_md_to_csv_converter.main:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = [
+# ✅ NEW: PEP 735 dependency groups
+[dependency-groups]
+dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
     "black>=23.0.0",
