--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.115.0",
     "groq>=1.0.0",
     "gspread>=6.2.1",
+    "openai>=2.21.0",
     "pandas>=2.3.3",
     "pillow>=12.1.0",
     "python-dotenv>=1.2.1",
